--- a/app/src/main/res/layout/fragment_broadcast.xml
+++ b/app/src/main/res/layout/fragment_broadcast.xml
@@ -6,15 +6,30 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/btn_registration"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="广播动态注册"
+        android:textAllCaps="false" />
+    <Button
+        android:id="@+id/btn_static_registration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="静态注册"
+        android:textAllCaps="false" />
 
     <Button
+        android:id="@+id/btn_local"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="本地广播"
+        android:textAllCaps="false" />
 
     <Button
+        android:id="@+id/btn_demo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="广播强制下线Demo"
+        android:textAllCaps="false" />
 
 </LinearLayout>
