--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/itrm_database"
             android:icon="@drawable/ic_launcher_foreground"
-            android:title="DataBase" />
+            android:title="存储相关" />
         <item
             android:id="@+id/itrm_permissions"
             android:icon="@drawable/ic_launcher_foreground"
