--- a/rxjava2demolibrary/src/main/res/layout/fragment_rxjava.xml
+++ b/rxjava2demolibrary/src/main/res/layout/fragment_rxjava.xml
@@ -5,37 +5,119 @@
     android:background="#fff"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_abc"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="基础使用" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_just"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="操作符 just()"
-        android:textAllCaps="false" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_from_array"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="操作符 fromArray()"
-        android:textAllCaps="false" />
+            <Button
+                android:id="@+id/btn_abc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="基础使用" />
 
-    <Button
-        android:id="@+id/btn_from_callable"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="操作符 fromCallable()"
-        android:textAllCaps="false" />
+            <Button
+                android:id="@+id/btn_just"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 just()"
+                android:textAllCaps="false" />
 
-    <Button
-        android:id="@+id/btn_from_futuer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="操作符 fromFuture()"
-        android:textAllCaps="false" />
+            <Button
+                android:id="@+id/btn_from_array"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 fromArray()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_from_callable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 fromCallable()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_from_futuer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 fromFuture()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_from_iterable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 fromIterable()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_defer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 defer()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_timer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 timer()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_interval"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 interbal()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_interval_range"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 interbalRange()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_range"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 range()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_range_long"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 rangeLong()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_eoe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建操作符 empty() never() error()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="转换操作符 map()"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_flat_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="转换操作符 flatMap()"
+                android:textAllCaps="false" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
