--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -18,6 +18,10 @@
             android:icon="@drawable/ic_launcher_foreground"
             android:title="存储相关" />
         <item
+            android:id="@+id/item_photo"
+            android:icon="@drawable/ic_launcher_foreground"
+            android:title="相册相机相关" />
+        <item
             android:id="@+id/item_permissions"
             android:icon="@drawable/ic_launcher_foreground"
             android:title="权限申请" />
