--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -14,9 +14,18 @@
             android:icon="@drawable/ic_launcher_foreground"
             android:title="Service" />
         <item
+            android:id="@+id/item_provider"
+            android:icon="@drawable/ic_launcher_foreground"
+            android:title="Provider 联系人示例" />
+
+        <item
             android:id="@+id/item_database"
             android:icon="@drawable/ic_launcher_foreground"
             android:title="存储相关" />
+        <item
+            android:id="@+id/item_notification"
+            android:icon="@drawable/ic_launcher_foreground"
+            android:title="通知相关" />
         <item
             android:id="@+id/item_photo"
             android:icon="@drawable/ic_launcher_foreground"
