--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -27,6 +27,10 @@
             android:icon="@drawable/ic_launcher_foreground"
             android:title="通知相关" />
         <item
+            android:id="@+id/item_hreads"
+            android:icon="@drawable/ic_launcher_foreground"
+            android:title="线程相关" />
+        <item
             android:id="@+id/item_photo"
             android:icon="@drawable/ic_launcher_foreground"
             android:title="相册相机相关" />
