--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -35,6 +35,10 @@
             android:icon="@drawable/ic_launcher_foreground"
             android:title="相册相机相关" />
         <item
+            android:id="@+id/item_http"
+            android:icon="@drawable/ic_launcher_foreground"
+            android:title="Http/WebView简单使用" />
+        <item
             android:id="@+id/item_permissions"
             android:icon="@drawable/ic_launcher_foreground"
             android:title="权限申请" />
